# Miles

./: .coverage  .dockerignore  .env.natural  .env.natural.example  .gitignore  .pre-commit-config-enhanced.yaml  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION_COMPLETE.md  BRANCHING_STRATEGY.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_BACKTESTING.md  DEPLOYMENT_TRIGGER.md  Dockerfile  Dockerfile.keploy  Dockerfile.natural  KEPLOY_RESULTS.md  MCP_SETUP_GUIDE.md  MILES_ARCHITECTURE_ANALYSIS.md  Makefile  README.md  README_NATURAL_LANGUAGE.md  ask_bot.py  ask_bot.py.bak  authenticate_telegram.sh  authenticate_telegram_fixed.sh  bandit_report.json  bonus_alert_bot.py  bonus_alert_bot.yaml  complete_vscode_config.json  config.py  coverage.xml  docker-compose.keploy.yml  docker-compose.natural.yml  docker-compose.yml  final_test_script.sh  find_and_message_bot.sh  fixed_vscode_config.json  fly.toml  (+32 more)
.github/: branch-protection.md
.github/workflows/: backtest-deployment.yml  bonus-alert.yml  bonus.yml  bonus_yml  build.yml  ci.yml  deploy-fly.yml
.lsp/.cache/: db.transit.json
.trunk/: trunk.yaml
all_pdfs/: bot_usage_analytics.csv  miles_analytics_report.md  promotion_analytics.csv
docs/: architecture_diagram.md  miles-bot_design_guide.md  postgresql_architecture.md
miles/: __init__.py  add_path_example.py  ai_source_discovery.py  bonus_alert_bot.py  chat_store.py  config.py  database.py  db.py  logging_config.py  metrics.py  models.py  persistence.py  plugin_api.py  plugin_loader.py  promo_store.py  rate_limiter.py  schedule_config.py  scheduler.py  scraper.py  source_search.py  source_store.py  storage.py  tasks.py  validation.py
miles/natural_language/: __init__.py  conversation_manager.py  function_registry.py
miles/plugins/: __init__.py
plugins/demo_hello/: __init__.py
plugins/latam_tracker/: __init__.py
plugins/livelo_scanner/: __init__.py
plugins/smiles_monitor/: __init__.py
plugins/source_discovery/: __init__.py
scripts/: backtest_deployment.py  cleanup_branches.sh  continuous_monitor.py  migrate_to_natural_language.py  ping_webhook.sh  quality_gates.py  set_secrets.sh
test/: test_log_receiver.py
test/keploy/test-set-0/tests/: test-1.yaml  test-2.yaml  test-3.yaml  test-4.yaml  test-5.yaml  test-6.yaml  test-7.yaml  test-8.yaml
test/keploy/test-set-1/tests/: test-1.yaml  test-10.yaml  test-2.yaml  test-3.yaml  test-4.yaml  test-5.yaml  test-6.yaml  test-7.yaml  test-8.yaml  test-9.yaml
tests/: test_integration.py  test_metrics.py  test_parsing.py  test_plugins.py  test_seen_store.py  test_source_search.py  test_source_store.py  test_stats.py
tests/data/: sample_feed.html
ziplogs/: .logs  0_build.txt  merged_logs.txt
