[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "miles"
version = "0.1.0"
description = "Telegram Bonus Alert Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "feedparser",
    "python-telegram-bot>=21.0",
    "APScheduler>=3.10",
    "redis>=5.0",
    "PyYAML",
]

[project.optional-dependencies]
# packages for development
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "openai>=0.27,<1.0",
    "pdfplumber",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0.20240406",
    "matplotlib",
]

[project.scripts]
miles-scan = "bonus_alert_bot:main"
miles-ask = "ask_bot:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

