[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "miles"
version = "0.1.0"
description = "Telegram Bonus Alert Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "feedparser",
    "python-telegram-bot~=20.8",
    "APScheduler>=3.10",
    "aiohttp>=3.9",
    "redis>=5.0",
    "PyYAML",
    "openai>=1.27,<2.0",
    "fastapi[all]",
    "uvicorn",
]

[project.optional-dependencies]
# packages for development
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-asyncio",
    "mypy",
    "pre-commit",
    "pdfplumber",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0.20240406",
    "types-redis",
    "matplotlib",
    "fakeredis>=2.0",
]

[project.scripts]
miles-scan = "bonus_alert_bot:main"
miles-ask = "ask_bot:main"

[project.entry-points.milesbot_plugins]
demo_hello = "plugins.demo_hello:HelloPlugin"
source_discovery = "plugins.source_discovery:SourceDiscoveryPlugin"
smiles_monitor = "plugins.smiles_monitor:SmilesMonitorPlugin"
livelo_scanner = "plugins.livelo_scanner:LiveloScannerPlugin"
latam_tracker = "plugins.latam_tracker:LatamTrackerPlugin"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

